fix: allow /api/memory to accept both JWT and API key auth; fix types

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\""
   },
   "devDependencies": {
+    "@types/express": "^5.0.3",
+    "@types/node": "^24.0.3",
     "concurrently": "^8.2.2"
   },
   "files": [
